# zenstac

./: .gitignore  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE.md  README.md  build-setup.bat  build-setup.sh  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build.yml  version-release.yml
scripts/: version.bat  version.sh
src/: README.md  index.html  main.jsx  styles.css
src-tauri/: Cargo.toml  README.md  api.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/database/: connection.rs  conversion.rs  mod.rs  models.rs  repository.rs  schema.rs  service.rs
src-tauri/src/models/: asset.rs  catalog.rs  collection.rs  conformance.rs  item.rs  link.rs  mod.rs  properties.rs  provider.rs  range.rs  search.rs  spatial_extent.rs  temporal_extent.rs
src-tauri/src/server/: handlers.rs  helpers.rs  middleware.rs  mod.rs  openapi.rs  server.rs  utils.rs
src/components/: AddCollectionDialog.jsx  AddItemDialog.jsx  AnalyticsDashboard.jsx  CollectionDetails.jsx  CollectionsTable.jsx  DataTable.jsx  EmptyState.jsx  Header.jsx  HelpDialog.jsx  ItemDetails.jsx  ItemsTable.jsx  LeafletMap.jsx  PageLayout.jsx  SearchPanel.jsx  SearchResults.jsx  SettingsDialog.jsx  ShoelaceDialog.jsx  ShoelaceDrawer.jsx  ShoelaceSearchInput.jsx  UploadAssetDialog.jsx
src/pages/: ApiPage.jsx  App.jsx  CollectionsPage.jsx  DashboardPage.jsx  HomePage.jsx  ItemsPage.jsx  SearchPage.jsx  SearchResultsPage.jsx  sharedState.jsx
src/services/: api.js  basemapService.js  (+1 more)
