[package]
name = "zenstac"
version = "1.0.0"
description = "A lightweight STAC server. Powered by Earthal Labs."
authors = ["Earthal Labs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zenstac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
rusqlite = { version = "0.30", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
geojson = "0.24"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

